@@ -41,8 +41,9 @@ public class Attribute implements Map.Entry<String, String>, Cloneable  {
      * @see #createFromEncoded*/
     public Attribute(String key, String val, Attributes parent) {
         Validate.notNull(key);
-        this.key = key.trim();
+        key = key.trim();
         Validate.notEmpty(key); // trimming could potentially make empty, so validate here
+        this.key = key;
         this.val = val;
         this.parent = parent;
     }
